ISPN-6412 Make RESTReplicationIT stable